<resources>
    <string name="app_name">DTVPlayer</string>
	<string name="app">DTVPlayer</string>
	<string name="sure">Are you sure?</string>
	<string name="on">On</string>
    <string name="off">Off</string>
	<string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="all">All</string>
	<string name="menu">MENU</string>
	<string name="tv">TV</string>
	<string name="radio">Radio</string>
	<string name="favorite">Favorite</string>
	<string name="picture_mode">Pciture mode</string>
	<string name="tel_text">TTX</string>
	<string name="ad">AD</string>
	<string name="ad_volume_up">AD volume up</string>
	<string name="ad_volume_down">AD volume down</string>
	<string name="unfavorite">Move Favorite</string>
	<string name="auto">Auto</string>
	<string name="type_4_3">4:3</string>
	<string name="type_16_9">16:9</string>
	<string name="full_screen">Full Screen</string>
	<string name="type_4_3_IGNORE">4:3</string>
	<string name="type_4_3_LETTER_BOX">4:3 LETTER BOX</string>
	<string name="type_4_3_PAN_SCAN">4:3 PAN SCAN</string>
	<string name="type_4_3_COMBINED">4:3 COMBINED</string>
	<string name="type_16_9_IGNORE">16:9</string>
	<string name="type_16_9_LETTER_BOX">16:9 LETTER BOX</string>
	<string name="type_16_9_PAN_SCAN">16:9 PAN SCAN</string>
	<string name="type_16_9_COMBINED">16:9 COMBINED</string>
	 <string name="stop">Stop</string>
	<string name="stop_scan">Stop scan?</string>
	<string name="mono">Mono</string>
	<string name="SAP">SAP</string>
	<string name="stereo">Stereo</string>
	<string name="left">Left</string>
	<string name="right">Right</string>
	<string name="sub">SUB</string>
	<string name="add">Add</string>
	<string name="edit">Edit</string>
	<string name="delete">Delete</string>
	<string name="move">Move</string>
	<string name="add_fav">Add into favorite</string>
	<string name="del_fav">Move from favorite</string>
	<string name="add_lock">Add Lock</string>
	<string name="del_lock">Delete Lock</string>
	<string name="add_skip">Add into skip</string>
	<string name="del_skip">Move from skip</string>
	<string name="add_into_group">Add into group</string>
    <string name="dtvplayer_loading">Loading...</string>
	<string name="dtvplayer_menu_button_list">Channel List</string>
	<string name="dtvplayer_menu_button_epg">EPG</string>
	<string name="dtvplayer_menu_button_settings">Settings</string>
	<string name="dtvplayer_menu_button_program_manager">Program Manager</string>
	<string name="dtvplayer_menu_button_timeshifting">Timeshifting</string>
	<string name="dtvplayer_menu_button_epg_book_manager">EPG Manager</string>
	<string name="dtvplayer_menu_button_pvr_manager">REC Manager</string>
    <string name="dtvplayer_menu_button_hide">HIDE</string>
	<string name="dtvplayer_skip_channel">Are you sure hide this channel</string>
	<string name="dtvplayer_enter_pvr">Are you sure enter pvr</string>
	<string name="dtvplayer_stop_pvr">Are you sure stop pvr</string>
	<string name="dtvplayer_change_channel">Pvr is recording,are you sure change current channel</string>
	<string name="dtvplayer_pvr_is_running">Pvr is recording,please stop pvr recording first.</string>
	<string name="dtvplayer_no_teletext">No Teletext</string>
	<string name="dtvplayer_channel_is_hided">"Invalid Input,the program is hided</string>
	<string name="dtvplayer_no_current_event">NOW: Information not available</string>
	<string name="dtvplayer_no_next_event">NEXT: Information not available</string>
	<string name="dtvplayer_title_info">No Title Information</string>
  	<string name="dtvplayer_detail_info">No Detailed Information</string>
	<string name="dtvplayer_no_channel_stored">No program,please scan first</string>
    <string name="dtvplayer_str_time_null">00:00:00</string>
  	<string name="dtvplayer_pvr_rec_time">Record Time</string>
  	<string name="dtvplayer_pvr_set_start_time">You can set start time</string>
    <string name="dtvplayer_pvr_rec_min">Min</string>
	<string name="dtvplayer_pvr_start_time">Duration Time</string>
	<string name="dtvplayer_pvr_record_dialog">Pvr will start,continue or ignore?</string>
	<string name="dtvplayer_subscribe_play_dialog">Subscribed event will start,continue or ignore?</string>
	<string name="dtvplayer_no_program">No program</string>
	<string name="dtvplayer_no_signal"> No signal</string>
	<string name="dtvplayer_scrambled">Scrambled program</string>
	<string name="dtvplayer_signal_bad">Signal quality is bad</string>
	<string name="dtvplayer_ac3_no_licence">AC3 audio no lience</string>
	<string name="dtvplayer_subtitle_language_set">Subtitle language set</string>
	<string name="dtvplayer_audio_language_set">Audio language set</string>
	<string name="dtvplayer_pvr_duration_time">REC Time setting</string>
	<string name="dtvplayer_pvr_duration_time_head">Duration Time</string>
	<string name="dtvplayer_pvr_min">Minute</string>
	<string name="dtvplayer_pvr_time_start">Start</string>
	<string name="download_sel_confirm">Save recorded stream on selected storage device?</string>
	<string name="usb_removed">USB device removed. Please check</string>
	<string name="usb_mounted">Testing to USB device</string>
	<string name="selected_help">Please choose the storage device and press OK</string>
	<string name="volume">Removable disk</string>
	<string name="pls_insert_usb">Please insert USB device</string>
	<string name="volume_total">Total space:</string>
	<string name="volume_available">Available space:</string>
	<string name="no_usb_device">Not Find Any USB Device</string>
    <string name="help_info_move">Move</string>
  	<string name="help_info_select">Select</string>
  	<string name="help_info_return">Return</string>
  	<string name="help_info_number">Number</string>
    <string name="settings_title">Settings</string>
	<string name="invalid_input">Invalid Input</string>
	<string name="invalid_password">Invalid password</string>
	<string name="no_channel_stored">There are no channels stored, do you want to update the list of channels?</string>
	<string name="subtitle">Subtitle</string>
	<string name="subtitle_switch">Subtitle Switch</string>
	<string name="screen_type ">Picture Size</string>
	<string name="audio_track">Audio Track</string>
	<string name="password_set ">Set password</string>
	<string name="sure_factory_set">Are you sure factory reset</string>
    <string name="sync_time_item">Update system time</string>
	<string name="sync_time">Are you sure synchronize system time by TDT time</string>
	<string name="pvr_storage_select">Select storage device</string>
    <string name="timeshift_time_set">Timeshifting setting</string>
    <string name="parental_rating_set">Parental rating age</string>
    <string name="ttx_region">TTX Region</string>
    <string name="lcn_switch">LCN</string>
	<string name="enter_cur_password">Current password</string>
	<string name="enter_new_password">New password</string>
	<string name="confirm_password">Confirm password</string>
	<string name="enter_lock_password">Enter your lock password</string>
	<string name="enter_password">Enter Password</string>
	<string name="vchip">VChip</string>
	<string name="closed_caption">Closed Caption</string>
	<string name="timeshifting_exit_message">Do you want exit timeshifting</string>
	<string name="timeshifting_pause_message">"yes" continue,"no" exit</string>
	<string name="timeshift_when_recording">Now is recording,if you want to timeshifting,you must first stop pvr</string>
	<string name="timeshift_when_radio">Now is radio, not support timeshifting</string>
	<string name="timeshift_when_lock">Locked channel,please unlock first</string>
	<string name="check_usb_device">Can not find the storage device</string>
	<string name="usb_cant_access_file">Disk or sdcard cant access</string>
	<string name="usbdisk_is_full">Disk is full or USB device disconnected,please check</string>
  	<string name="epg_sunday">Sun.</string>
  	<string name="epg_monday">Mon.</string>
    <string name="epg_tuesday">Tue.</string>
    <string name="epg_wednesday">Wed.</string>
    <string name="epg_thursday">Thur.</string>
    <string name="epg_friday">Fri.</string>
    <string name="epg_saturday">Sat.</string>
    <string name="epg_loading">Loading EPG data......</string>
    <string name="epg_waiting">Please wait......</string>
    <string name="epg_no_epg_info">No EPG Info</string>
    <string name="epg_operate_des01">OK--BookPlay/BookRecord     		  INFO--EIT Dtails</string>
    <string name="epg_title">EPG</string>
    <string name="epg_book">BOOK</string>
    <string name="epg_info">EPG INFO</string>
    <string name="epg_booklist">BOOK LIST</string>
    <string name="epg_page_up">PAGE UP</string>
    <string name="epg_page_down">PAGE DOWN</string>
    <string name="epg_event_add">Event Add</string>
	<string name="recmanager_proname">Program name</string>
    <string name="recmanager_evtname">Event name</string>
    <string name="recmanager_time">Time</string>
    <string name="recmanager_filename">File name</string>
    <string name="recmanager_help_info">Press ZOOM IN key to create new record</string>
    <string name="recording">Recording</string>
	<string name="completed ">Recorded</string>
	<string name="scheduled">Scheduled</string>
	<string name="sure_delete">Are you sure delete</string>
	<string name="play">Play</string>
  	<string name="time_shift_exit">Are you sure exit timeshifting?</string>
  	<string name="subtitle_language_set">Subtitle language set</string>
  	<string name="audio_language_set">Audio language set</string>
   	<string name="dtvscan_scansettingtitle">Channel Search</string>
	<string name="dtvscan_manualscansettingtitle">Manual Scan</string>
	<string name="dtvscan_scan_auto">Auto Scan</string>
	<string name="dtvscan_scan_manual">Manual Scan</string>
	<string name="dtvscan_erea">Area</string>
	<string name="dtvscandvbt_erea_uk">UK</string>
	<string name="dtvscandvbt_erea_france">France</string>
	<string name="dtvscandvbt_erea_australia">Australia</string>
	<string name="dtvscandvbt_erea_italy">Italy</string>
	<string name="dtvscandvbt_erea_taiwan">Taiwan</string>
	<string name="dtvscan_lcn">LCN</string>
	<string name="dtvscan_lcn_on">on</string>
	<string name="dvbs_dish_setup">DISH SETUP</string>
	<string name="item_no">No.</string>
	<string name="title_sat_name">Name</string>
	<string name="title_longitude_direction">Direction</string>
	<string name="title_longitude_angle">Angle</string>
	<string name="ts_frequency">Frequency</string>
	<string name="ts_polarity">Polarity</string>
	<string name="ts_symbol">Symbol</string>
	<string name="dish_setup_conf_button_des1">zoom in</string>
	<string name="dish_setup_conf_button_des2">zoom out</string>
	<string name="dish_setup_conf_button_des3">repeat</string>
	<string name="dish_setup_conf_button_des4">info</string>
	<string name="dish_setup_conf_button_des5">ok</string>
	<string name="dish_setup_conf_button_des6">ratio</string>
	<string name="dish_setup_conf_button_des7">sub-t</string>
	<string name="dish_setup_conf_button_des8">audio</string>
	<string name="dish_setup_conf_button_des1_info">Goto Sat/TS</string>
	<string name="dish_setup_conf_button_des2_info">Add</string>
	<string name="dish_setup_conf_button_des3_info">Edit</string>
	<string name="dish_setup_conf_button_des4_info">Del</string>
	<string name="dish_setup_conf_button_des5_info">Select</string>
	<string name="dish_setup_conf_button_des6_info">Scan</string>
	<string name="dish_setup_conf_button_des7_info">Set Position</string>
	<string name="dish_setup_conf_button_des8_info">Set Location</string>
	<string name="no_scan_list">"zoom out" add satellite information.</string>
	<string name="channel_name">Channel Name</string>
	<string name="event_name">Event Name</string>
	<string name="event_start_date">Start Date</string>
	<string name="event_start_time">Start Time</string>
	<string name="repeat">Repeat</string>
	<string name="mode">Mode</string>
	<string name="status">Status</string>
</resources>