<?xml version="1.0" encoding="utf-8"?>  
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal" 
	android:layout_gravity="center"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
    
	<LinearLayout
		android:orientation="vertical"  
		android:layout_height="fill_parent"
		android:layout_width="fill_parent">
    
		<TextView  
			android:background="@drawable/epg_title_bg"
			android:layout_gravity="center|left"	
			android:layout_width="fill_parent"	    
			android:layout_height="90px"
			android:textColor="@android:color/white"
			android:gravity="left"
			android:paddingLeft="50px"
			android:paddingTop="35px"
			android:textSize="24sp"
			android:text="@string/dvbs_dish_setup"
			/>    	
    
		<LinearLayout
			android:orientation="horizontal"  
			android:layout_width="fill_parent"
			android:layout_height="10px"
			android:layout_weight="1"
			android:background="#FF171717">
			<LinearLayout
				android:orientation="vertical"
				android:layout_width="10px"
				android:layout_marginLeft="30px"
				android:layout_height="fill_parent"
				android:layout_weight="4">
				
				<RelativeLayout
				    android:layout_height="60px"
				    android:layout_width="fill_parent">
						<LinearLayout    
						    android:id="@+id/sat_info_title_layout"  
						   android:layout_width="fill_parent"       
						   android:orientation="horizontal"  
						   android:layout_height="wrap_content"       
						   android:paddingBottom="3px"    
						   android:paddingLeft="10px">
								
							<ImageView android:id="@+id/icon"
								android:layout_width="20px"
								android:layout_height="30px"
								android:layout_gravity="center"
								android:layout_weight="1"/>

							<TextView
								android:id="@+id/sat_id"
								android:text="@string/item_no"
								android:layout_width="20px"
								android:textSize="20sp"
								android:layout_height="wrap_content"
								android:gravity="center"
								android:layout_gravity="center_vertical"
								android:singleLine="true"
								android:layout_weight="4"/>
							 <TextView
							  	android:id="@+id/direction"
							  	android:text="@string/title_longitude_direction"
							  	android:layout_width="20px"
							  	android:textSize="20sp"
							  	android:layout_height="wrap_content"
							  	android:paddingLeft="10px"
							  	android:gravity="center"
							  	android:layout_gravity="center_vertical"
							  	android:singleLine="true"
							  	android:layout_weight="8"/>  
							<TextView
							  	android:id="@+id/position"
							  	android:text="@string/title_longitude_angle"	
							  	android:layout_width="20px"
							  	android:textSize="20sp"
							  	android:layout_height="wrap_content"
							  	android:paddingLeft="10px"
							  	android:gravity="center"
							  	android:layout_gravity="center_vertical"
							  	android:singleLine="true"
							  	android:layout_weight="8"/>  		

							  <TextView
							  	android:id="@+id/name"
							  	android:text="@string/title_sat_name"
							  	android:layout_width="20px"
							  	android:textSize="20sp"
							  	android:layout_height="wrap_content"
							  	android:gravity="center"
							  	android:layout_gravity="center_vertical"
							  	android:singleLine="true"
							  	android:ellipsize="marquee"  
						     		 android:marqueeRepeatLimit="marquee_forever"
							  	android:layout_weight="20"/> 	
							  	
						</LinearLayout>  


	  					<LinearLayout   
	  							   android:id="@+id/ts_info_title_layout" 	
								   android:layout_width="fill_parent"      
								   android:orientation="horizontal"  
								   android:layout_height="wrap_content"       
								   android:paddingBottom="3px"    
								   android:paddingLeft="10px"
								   android:visibility="gone">

									  <ImageView android:id="@+id/icon"
								  			android:layout_width="30px"
										 	 android:layout_height="30px"
										 	 android:layout_gravity="center"
										 	 android:layout_weight="1"/>
									
									 <TextView
									  	android:id="@+id/ts_no"
									  	android:text="@string/item_no"	
									  	android:layout_width="20px"
									  	android:textSize="20sp"
									  	android:layout_height="wrap_content"
									  	android:gravity="center"
									  	android:layout_gravity="center_vertical"
									  	android:singleLine="true"
									  	android:layout_weight="8"/>

								        <TextView
									  	android:id="@+id/frequency"
									  	android:text="@string/ts_frequency"
									  	android:layout_width="20px"
									  	android:textSize="20sp"
									  	android:layout_height="wrap_content"
									  	android:gravity="center"
									  	android:layout_gravity="center_vertical"
									  	android:singleLine="true"
									  	android:layout_weight="16"/>
									 <TextView
									  	android:id="@+id/polarity"
									  	android:text="@string/ts_polarity"	
									  	android:layout_width="20px"
									  	android:textSize="20sp"
									  	android:layout_height="wrap_content"
									  	android:paddingLeft="30px"
									  	android:gravity="center"
									  	android:layout_gravity="center_vertical"
									  	android:singleLine="true"
									  	android:layout_weight="10"/>  
									  <TextView
									  	android:id="@+id/symbol"
									  	android:text="@string/ts_symbol"	
									  	android:layout_width="20px"
									  	android:textSize="20sp"
									  	android:layout_height="wrap_content"
									  	android:gravity="center"
									  	android:layout_gravity="center_vertical"
									  	android:singleLine="true"
									  	android:layout_weight="16"/> 
									  
								</LinearLayout> 
						  </RelativeLayout>    


    						<RelativeLayout
						    android:layout_height="fill_parent"
						    android:layout_width="fill_parent">	
								  <ListView
								     	android:id="@+id/sat_list"
								  	android:layout_width="fill_parent"
								  	android:layout_height="fill_parent"					     				     
								  	android:scrollbars="vertical"/>
								<TextView
									  	android:id="@+id/no_data_info"
									  	android:padding="60px"
									  	android:text="@string/no_scan_list"	
									  	android:layout_width="wrap_content"
									  	android:textSize="20sp"
									  	android:layout_height="wrap_content"
									  	android:gravity="center"
									  	android:layout_gravity="center_vertical"
									  	android:visibility="gone"
									  	android:background="#FF171717"
									  	/> 		
						    </RelativeLayout>    	
			</LinearLayout> 
			<LinearLayout
						  android:orientation="vertical"
					  	android:layout_width="10px"
					  	android:background="#FF171717"
					  	android:layout_height="fill_parent"
						  android:layout_weight="3"
						  android:paddingLeft="30px"
						   android:paddingRight="30px">

						<TextView
								android:id="@+id/sat_name"
								android:layout_width="fill_parent"
								android:layout_height="45px"
								android:textSize="22sp"
								android:gravity="center"
								 android:singleLine="true"
	  							android:layout_gravity="center_vertical"/>
	  					 <ListView
						     	android:id="@+id/sat_lnb_list"
						  	android:layout_width="fill_parent"
						  	android:layout_height="fill_parent"					     				     
						  	android:scrollbars="vertical"/> 		

			</LinearLayout> 
		</LinearLayout> 
			  	
		<LinearLayout
			android:orientation="vertical"
			android:background="@drawable/epg_eit_list_bg"
			android:layout_width="fill_parent"
			android:layout_height="125px"
			android:paddingLeft="30px"
			android:paddingBottom="35px">

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="45px"
				android:layout_marginTop="5px">
				
				<LinearLayout
					android:id="@+id/editProgramOpDes01"
					android:orientation="horizontal"
					android:layout_width="wrap_content"
					android:layout_height="40px"
					android:layout_weight="1">
					<TextView
						android:background="@drawable/btn_help_des"
						android:text="@string/dish_setup_conf_button_des1"
						android:layout_marginLeft="10px"
						android:textSize="16sp"
						android:layout_width="120px"
						android:layout_height="35px"
						android:gravity="center"/>
					<TextView
						android:text="@string/dish_setup_conf_button_des1_info"
						android:layout_marginLeft="10px"
						android:textSize="16sp"
						android:layout_width="wrap_content"
						android:layout_height="fill_parent"
						android:layout_weight="1"/>		
				</LinearLayout>	
				<LinearLayout
					android:id="@+id/editProgramOpDes02"
					android:orientation="horizontal"
					android:layout_width="wrap_content"
					android:layout_height="40px"
					android:layout_weight="1">
					<TextView
						android:background="@drawable/btn_help_des"
						android:text="@string/dish_setup_conf_button_des2"
						android:layout_marginLeft="10px"
						android:textSize="16sp"
						android:layout_width="120px"
						android:layout_height="35px"
						android:gravity="center"/>
					<TextView
						android:text="@string/dish_setup_conf_button_des2_info"
						android:layout_marginLeft="10px"
						android:textSize="16sp"
						android:layout_width="wrap_content"
						android:layout_height="fill_parent"
						android:layout_weight="1"/>	
				</LinearLayout>	
				<LinearLayout
					android:id="@+id/editProgramOpDes03"
					android:orientation="horizontal"
					android:layout_width="wrap_content"
					android:layout_height="40px"
					android:layout_weight="1">
					<TextView
						android:background="@drawable/btn_help_des"
						android:text="@string/dish_setup_conf_button_des3"
						android:layout_marginLeft="10px"
						android:textSize="16sp"
						android:layout_width="120px"
						android:layout_height="35px"
						android:gravity="center"/>	
					<TextView
						android:text="@string/dish_setup_conf_button_des3_info"
						android:layout_marginLeft="10px"
						android:textSize="16sp"
						android:layout_width="wrap_content"
						android:layout_height="fill_parent"
						android:layout_weight="1"/>		
				</LinearLayout>
				<LinearLayout
					android:id="@+id/editProgramOpDes04"
					android:orientation="horizontal"
					android:layout_width="wrap_content"
					android:layout_height="40px"
					android:layout_weight="1">
					<TextView
						android:background="@drawable/btn_help_des"
						android:text="@string/dish_setup_conf_button_des4"
						android:layout_marginLeft="10px"
						android:textSize="16sp"
						android:layout_width="120px"
						android:layout_height="35px"
						android:gravity="center"/>
					<TextView
						android:text="@string/dish_setup_conf_button_des4_info"
						android:layout_marginLeft="10px"
						android:textSize="16sp"
						android:layout_width="wrap_content"
						android:layout_height="fill_parent"
						android:layout_weight="1"/>		
				</LinearLayout>	
			</LinearLayout> 	

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="40px">
				
				<LinearLayout
					android:id="@+id/editProgramOpDes05"
					android:orientation="horizontal"
					android:layout_width="wrap_content"
					android:layout_height="45px"
					android:layout_weight="1">
					<TextView
						android:background="@drawable/btn_help_des"
						android:text="@string/dish_setup_conf_button_des5"
						android:layout_marginLeft="10px"
						android:textSize="16sp"
						android:layout_width="120px"
						android:layout_height="35px"
						android:gravity="center"/>
					<TextView
						android:text="@string/dish_setup_conf_button_des5_info"
						android:layout_marginLeft="10px"
						android:textSize="16sp"
						android:layout_width="wrap_content"
						android:layout_height="fill_parent"
						android:layout_weight="1"/>		
				</LinearLayout>	
				<LinearLayout
					android:id="@+id/editProgramOpDes06"
					android:orientation="horizontal"
					android:layout_width="wrap_content"
					android:layout_height="40px"
					android:layout_weight="1">
					<TextView
						android:background="@drawable/btn_help_des"
						android:text="@string/dish_setup_conf_button_des6"
						android:layout_marginLeft="10px"
						android:textSize="16sp"
						android:layout_width="120px"
						android:layout_height="35px"
						android:gravity="center"/>
					<TextView
						android:text="@string/dish_setup_conf_button_des6_info"
						android:layout_marginLeft="10px"
						android:textSize="16sp"
						android:layout_width="wrap_content"
						android:layout_height="fill_parent"
						android:layout_weight="1"/>	
				</LinearLayout>	
				<LinearLayout
					android:id="@+id/editProgramOpDes07"
					android:orientation="horizontal"
					android:layout_width="wrap_content"
					android:layout_height="40px"
					android:layout_weight="1"
					android:visibility="invisible">
					<TextView
						android:background="@drawable/btn_help_des"
						android:text="@string/dish_setup_conf_button_des7"
						android:layout_marginLeft="10px"
						android:textSize="16sp"
						android:layout_width="120px"
						android:layout_height="35px"
						android:gravity="center"/>	
					<TextView
						android:text="@string/dish_setup_conf_button_des7_info"
						android:layout_marginLeft="10px"
						android:textSize="16sp"
						android:layout_width="wrap_content"
						android:layout_height="fill_parent"
						android:layout_weight="1"/>		
				</LinearLayout>
				<LinearLayout
					android:id="@+id/editProgramOpDes08"
					android:orientation="horizontal"
					android:layout_width="wrap_content"
					android:layout_height="40px"
					android:layout_weight="1"
					android:visibility="invisible">
					<TextView
						android:background="@drawable/btn_help_des"
						android:text="@string/dish_setup_conf_button_des8"
						android:layout_marginLeft="10px"
						android:textSize="16sp"
						android:layout_width="120px"
						android:layout_height="35px"
						android:gravity="center"/>
					<TextView
						android:text="@string/dish_setup_conf_button_des8_info"
						android:layout_marginLeft="10px"
						android:textSize="16sp"
						android:layout_width="wrap_content"
						android:layout_height="fill_parent"
						android:layout_weight="1"/>		
				</LinearLayout>	
			</LinearLayout> 	
			
		</LinearLayout> 	

	</LinearLayout>

</LinearLayout>

