<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    
    
        <EditText android:id="@+id/edittext_password_old"
           android:hint="@string/enter_cur_password"	
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:password="true"
           android:layout_marginLeft="20dp"
           android:layout_marginRight="20dp"/>
  
    
   
        <EditText android:id="@+id/edittext_password1"
           android:hint="@string/enter_new_password"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:password="true" 
           android:layout_marginLeft="20dp"
           android:layout_marginRight="20dp"
           android:nextFocusDown="@+id/edittext_password2"/>
  
        <EditText android:id="@+id/edittext_password2"
           android:hint="@string/confirm_password"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:password="true"
           android:layout_marginLeft="20dp"
           android:layout_marginRight="20dp"/>
 
</LinearLayout>
 